@@ -6,8 +6,9 @@ fusionforge (5.1.1-9) UNRELEASED; urgency=low
 
   [ Thorsten Glaser ]
   * SECURITY: Upon user deletion, remove their Unix account as well
+  * SECURITY: Do not disclose inaccessible groups on user_home/toplist
 
- -- Thorsten Glaser <tg@mirbsd.de>  Mon, 03 Sep 2012 11:51:57 +0200
+ -- Thorsten Glaser <tg@mirbsd.de>  Mon, 03 Sep 2012 14:07:16 +0200
 
 fusionforge (5.1.1-8) unstable; urgency=low
 
